<resources>
    <string name="app_name">Patinfly</string>
    <string name="started_title">Hello, Welcome Back!</string>
    <string name="started_sub_title">
        Wheels on the road!
        <br><b>Login</b> if you already have an account.</br>
        <br><b>Register</b> to get started .</br>
    </string>
    <string name="btn_register">SIGN UP</string>
    <string name="illustration_img">illustration_img</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to App</string>
    <string name="password_create">Create Password</string>
    <string name="login_sub_title">
        <font color="#FFBB86FC"><b>Login</b></font> if you have an account.
    </string>
    <string name="login_email">Your email or username</string>
    <string name="login_password">Your Password</string>
    <string name="login_forgot_pw">Forgot password?</string>
    <string name="login_password2">Repeat Password</string>
    <string name="login_havent_account">
        I don\'t have an account<font color="#00C988"> Register </font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
        <font color="#FFBB86FC"><b>Register</b></font> to get started.
    </string>

    <string name="button_text_finish">Finish</string>
    <string name="button_text_skip">Skip</string>
    <string name="register_firstname">Your first name</string>
    <string name="register_lastname">Your last name</string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_phone_number">Your phone number</string>
    <string name="register_button">SIGN UP</string>
    <string name="create_password">CREATE PASSWORD</string>
    <string name="register_nationality">Nationality</string>
    <string name="home_title">Patinfly</string>
    <string name="home_sub_title">Main Page</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="register_ID">Your ID Number</string>
    <string name="register_km">Your Traveled Km</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="your_nationality">Your Nationality</string>
    <string name="my_profile_title">My profile</string>
    <string name="btm_edit_profile">EDIT PROFILE</string>
    <string name="btm_update_profile">UPDATE PROFILE</string>
    <string name="spinnerPrompt">Select your language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_button">skip</string>
    <string name="and_begin_your_journey">And begin your journey!</string>
    <string name="begin">And begin your journey in Patinfly</string>
    <string name="available">When you are ready to rent a scooter , you can see the name of the scooter and battery percentage of all available scooters in your area</string>
    <string name="scooternear">Patinfly is an app that allows you to simply rent a scooter near your location</string>
    <string name="let_s_begin_the_tour">Let\'s begin the tour</string>
    <string name="Itembattery">BATTERY:</string>
    <string name="Itemname">NAME:</string>
    <string name="title_activity_menu">MenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="available_scooters">Available Scooters</string>
    <string name="my_profile">My Profile</string>
    <string name="scooters">Scooters</string>
    <string name="select_an_noption">Select an\noption</string>

</resources>