<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/purple_200"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_started_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/started_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_started_sub_title"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:lineHeight="20sp"
            android:text="@string/started_sub_title"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/img_illustration_started"
            android:layout_width="match_parent"
            android:layout_height="381dp"
            android:contentDescription="@string/illustration_img"
            android:src="@drawable/illustration_started" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/ButtonWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/btn_login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/ButtonWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/btn_register" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>