<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1E0F2"
    android:padding="20dp"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_register_title"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register_title" />

        <TextView
            android:id="@+id/tv_register_sub_title"
            style="@style/SubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/register_sub_title"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fullname"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/register_fullname"
            app:startIconDrawable="@drawable/ic_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fullname"
                style="@style/TextImputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="false"
                tools:ignore="VisualLintTextFieldSize">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ID"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/register_ID"
            app:startIconDrawable="@drawable/ic_circle_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_ID"
                style="@style/TextImputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/register_email"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/TextImputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="VisualLintTextFieldSize">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_num"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/your_phone_number"
            app:startIconDrawable="@drawable/ic_circle_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_num"
                style="@style/TextImputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/nationalitySpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_text_field"
            android:visibility="visible" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_km"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/traveled_km"
            app:startIconDrawable="@drawable/ic_circle_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_km"
                style="@style/TextImputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="25dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/ButtonBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:text="@string/register_button"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>